# coora-esp-wasm

./: README.md  justfile  package.json
coora-app/: README.md  justfile  package-lock.json  package.json
coora-app-rs/: Cargo.toml  README.md  justfile
coora-app-rs/crates/hello_led/: Cargo.toml
coora-app-rs/crates/hello_world/: Cargo.toml
coora-app-rs/src/: hello_led.rs  lib.rs
coora-app/config/: asconfig.json  tsconfig.as.json
coora-app/config/assemblyscript/: asconfig.json
coora-app/config/jest/: jest.config.ts  setup.ts  tsconfig.json  types.d.ts
coora-app/config/typescript/: moduleExt.d.ts  tsconfig.json
coora-app/rust-example/: Cargo.toml  README.md
coora-app/rust-example/src/: lib.rs
coora-app/rust_example/: Cargo.toml  README.md  justfile
coora-app/rust_example/.cargo/: config.toml
coora-app/rust_example/src/: lib.rs  (+1 more)
coora-docs/: README.md  env.ps1  justfile  package-lock.json  package.json
coora-docs/blog/: 2022-11-14-hello-world.md  authors.yml
coora-docs/docs/: index.md
coora-docs/src/: docusaurus.config.js  sidebars.js  tsconfig.json
coora-engine/: Cargo.toml  README.md  justfile  rustfmt.toml
coora-engine/.cargo/: config.toml
coora-engine/crates/bindings/: Cargo.toml
coora-engine/crates/bindings/examples/: export.rs  export_bindings.rs  exports.rs  exports_literal.rs  features.rs  hello.rs  imports.rs  imports_impl.rs  imports_wip.rs  simple.rs  simple_the_answer.rs
coora-engine/crates/bindings/src/: lib.rs
coora-engine/crates/bindings/src/bindings/: coora_plugin_bindings.rs  export.rs  export_rs.rs  export_ts.rs  mod.rs
coora-engine/crates/bindings_macro/: Cargo.toml
coora-engine/crates/bindings_macro/src/: lib.rs
coora-engine/crates/bindings_macro/src/export/: mod.rs  plugin_impl.rs  wasm_export.rs
coora-engine/crates/bindings_macro/src/import/: bindings_rs.rs  bindings_ts.rs  mod.rs  plugin_impl.rs  wasm_import.rs
coora-engine/crates/bindings_macro/src/parser/: binding_func_definition.rs  bindings_definition.rs  bindings_rust.rs  bindings_typescript.rs  coora_plugin.rs  func_signature.rs  mod.rs  token.rs  utility.rs
coora-engine/crates/bindings_macro/src/utils/: bindings_func_definition.rs  mod.rs  utility.rs
coora-engine/crates/bindings_utils/: Cargo.toml
coora-engine/crates/bindings_utils/src/: lib.rs
coora-engine/crates/bindings_utils/src/export/: wasm_export.rs
coora-engine/crates/bindings_utils/src/func_args/: arg.rs  create_import_func.rs  mod.rs  parse_func_args.rs
coora-engine/crates/bindings_utils/src/import/: bindings_ts.rs  create_func.rs  create_trait.rs  mod.rs  plugin_impl.rs  wasm_import.rs
coora-engine/crates/bindings_utils/src/utils/: bindings_func_definition.rs  token.rs  utility.rs
coora-engine/crates/bindings_utils/src/utils_func/: arg.rs  mod.rs  parse_func.rs  parse_func_args.rs
coora-engine/crates/bindings_utils/test/: sweet.rs  utility.rs
coora-engine/crates/bindings_utils/test/imports/: bindings_ts.rs  create_fn.rs  create_trait.rs  mod.rs  parse_fn.rs  parse_trait.rs  transmute.rs
coora-engine/crates/engine/: Cargo.toml
coora-engine/crates/engine/src/: factories.rs  include_wasm.rs  lib.rs  utility.rs
coora-engine/crates/engine/src/exports/: adder.rs  mod.rs  sketch.rs
coora-engine/crates/engine/src/imports/: console.rs  debug.rs  env.rs  math.rs  memory_test.rs  mod.rs  std_imports.rs  time.rs
coora-engine/crates/engine/src/plugins/: console.rs  core.rs  led.rs  memory_test.rs  mod.rs  plugin.rs  serial.rs  sketch.rs  time.rs
coora-engine/crates/engine/src/sketch/: instance.rs  mod.rs
coora-engine/crates/engine/src/wasm/: mod.rs  plugin.rs  user_state.rs  wasm_app.rs  wasm_engine.rs  wasm_instance.rs  wasm_instance_builder.rs  wasm_mem.rs
coora-engine/crates/engine/test/: sweet.rs
coora-engine/crates/engine/test/_core/: hello_led.rs  hello_world.rs  mod.rs
coora-engine/crates/engine/test/plugins/: bindings.rs  hello_led.rs  hello_world.rs  mod.rs  terminal_leds.rs  test_memory.rs  utility.rs  wasm.rs
coora-engine/crates/engine/test/wasm/: app.rs  imports.rs  mod.rs  test_memory.rs
coora-engine/crates/target_esp32/: Cargo.toml  README.md  justfile
coora-engine/crates/target_esp32/.cargo/: config.toml
coora-engine/crates/target_esp32/examples/: app.rs  hello_wasm.rs  hello_wifi.rs  led_strip.rs  sketch_server.rs  wasm_simple.rs  wasmi.rs
coora-engine/crates/target_esp32/src/_sketch/: _default_sketch.rs
dev-docs/: lean.md  mqtt.md  overview.md  plan.md
docs/: comms-plan.md  mqtt.md  references.md
targets/coora_target_esp32/: Cargo.toml  README.md  justfile  partitions.csv
(+91 files in other folders)
