# https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
	"crates/*",
]
#others should exclude themselves
exclude = []

[workspace.package]
version = "0.1.1"
edition = "2021"
license-file = "../LICENSE"
readme = "README.md"
authors = ["Peter Hayman <peteyhayman@gmail.com>"]
description = "Code embedded devices wirelessly from a browser"
documentation = "https://github.com/mrchantey/coora"
repository = "https://github.com/mrchantey/coora"

[workspace.dependencies]
# internal
coora_engine = {path = "./crates/engine", version = "0.1.1" }
coora_bindings = {path = "./crates/bindings", version = "0.1.1" }
coora_bindings_macro = {path = "./crates/bindings_macro", version = "0.1.1" }
# forky
forky_core = {path = "../../forky/crates/forky_core" }
sweet = {path = "../../forky/crates/sweet" }
# forky_cli = {path = "../../forky/crates/forky_cli" }
# wasm
rgb = "0.8.34"
anyhow = "1"
extend = "1.1.2"
wasmi = "0.20.0"


# Compilation
convert_case = "0.6.0"
backtrace = "0.3.66"
proc-macro2 = "1.0.47"
syn = {version="1.0.103",features= ["full"] }
quote = "1.0.21"
inventory = "0.3.2"