[package]
name = "coora_bindings_macro"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[dependencies]
backtrace = {workspace = true}
proc-macro2 = {workspace = true}
syn = {workspace = true}
quote = {workspace = true}
inventory = {workspace = true}
extend = {workspace = true}
anyhow = {workspace = true}
convert_case = {workspace=true}
coora_bindings_utils = {workspace=true}

[lib]
proc-macro = true
