[package]
name = "coora_target_esp32"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
debug = true # uncomment for production

[profile.dev]
opt-level = "s"
debug = true
# opt-level = "z"

#keep out of parent workspace
[workspace]
#does something, cant remember what
[lib]


[dependencies]
anyhow = "1"
embedded-svc = "0.22.3"
embedded-hal = "=1.0.0-alpha.8"
esp-idf-hal = "0.38.1"
# esp-idf-hal = {path = "../../../../work-ref/esp-idf-hal"}
esp-idf-svc = {version = "0.42.5", features = ["experimental", "alloc"]}
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
wasmi =  {version = "0.20.0", default-features=false }
# wasmi =  {version = "0.20.0"}
rgb = "0.8.34"
# forky_esp = {path = "../forky_esp"}
coora_engine = {path = "../engine"}
extend = "1.1.2"

[build-dependencies]
embuild = "0.30"
anyhow = "1"